--- a/app/views/data/_form.html.erb
+++ b/app/views/data/_form.html.erb
@@ -63,16 +63,16 @@
     $(document).ready(function() {
       $("#select_ignored").selectize({
         maxItems:<%= eval(@datum.headers).count %>,
-        items: JSON.parse($("#datum_ignored").val() || '[]')
+        items: JSON.parse($("#datum_ignored").val())
       });
       $("#select_numbers").selectize({
         maxItems:<%= eval(@datum.headers).count %>,
-        items: JSON.parse($("#datum_numbers").val() || '[]')
+        items: JSON.parse($("#datum_numbers").val())
       });
     })
 
     var update = function(el, input) {
-      $(input).val(JSON.stringify($(el).val() || '[]'));
+      $(input).val(JSON.stringify($(el).val()));
       console.log($(input).val())
     }
   <% end %>
