--- a/app/views/data/index.html.erb
+++ b/app/views/data/index.html.erb
@@ -18,7 +18,7 @@
         <tr>
           <td><%= I18n.l datum.updated_at.localtime, format: :long %></td>
           <td><%= datum.name %></td>
-          <td><%= datum.items.count %></td>
+          <td><%= datum.content.lines.count %></td>
           <td><%= link_to 'Show', datum %></td>
           <td><%= link_to 'Edit', edit_datum_path(datum) %></td>
           <td><%= link_to 'Destroy', datum, method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' %></td>
