--- a/app/views/visualizations/standalone.html.erb
+++ b/app/views/visualizations/standalone.html.erb
@@ -136,17 +136,15 @@
       background: #c5523f;
     }
 
-    #loadingText {
-      width: 100%;
-      text-align: center;
-      font-size: 2vw;
+    #loadingCenter {
+      margin: auto;
     }
 
 </style>
 </head>
 <body>
   <div class="visualization-container">
-      <div id="loadingPlaceholder"><div id="loadingText"><%= image_tag "squares-loading.svg" %></div></div>
+      <div id="loadingPlaceholder"><div id="loadingCenter"><%= render partial: 'layouts/squares_loading' %></div></div>
     <!-- Content Start -->
       <h1 class="title"><%= @visualization.title %></h1>
       <div id="sequence"></div>
